Fixing product section

--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
 </head>
+
 <body>
 
   <div class="wrapper">
@@ -21,19 +23,23 @@
           <li class="list__item"><a class="list__item--link" href="#">explore</a></li>
         </ul>
         <ul class="list  list--margin">
-          <li class="list__icon"><a class="list__icon--margin" href="#"><img src="assets/images/nav_search-icon.svg" alt="search icon" /></a></li>
-          <li class="list__icon"><a class="list__icon--margin" href="#"><img src="assets/images/nav_account-icon.svg" alt="account icon" /></a></li>
-          <li class="list__icon"><a class="list__icon--margin" href="#"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></a></li>
+          <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/nav_search-icon.svg"
+                alt="search icon" /></a></li>
+          <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/nav_account-icon.svg"
+                alt="account icon" /></a></li>
+          <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/nav_cart-icon.svg"
+                alt="cart icon" /></a></li>
         </ul>
       </nav>
       <div class="area">
-        <img src="assets/images/header_photo.svg" alt="photo for the header section" />
+        <img class="area__image  area__image--reset" src="assets/images/header_photo.svg"
+          alt="photo for the header section" />
         <div class="content--area">
           <h2 class="upper-title  upper-title--header">Beats Studio3 Wireless</h2>
           <h1 class="title  title--header">Experience your<br />music like never before.</h1>
           <div class="group">
             <p class="price  price--white">&#36;299.95</p>
-            <button class="btn  btn--yellow">buy now</button>
+            <button class="btn  btn--yellow  btn--header-margin">buy now</button>
           </div>
           <p class="promo  promo--header">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
         </div>
@@ -42,7 +48,7 @@
     <!-- Section 1 Beats Pill -->
     <section class="area  area--size  area--reverse">
       <div class="area__item">
-        <img src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
+        <img class="area__image" src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
         <div class="carousel">
           <span class="carousel__item  carousel__item--black"></span>
           <span class="carousel__item  carousel__item--gray"></span>
@@ -68,14 +74,14 @@
     </section>
     <!-- Section 2 PowerBeat Pro -->
     <section class="area  area--size  area--bg-section-2">
-      <img src="assets/images/body_powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
+      <img class="area__image" src="assets/images/body_powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
       <div class="content--area">
         <p class="upper-title">Totally wireless high-performance earphones</p>
         <h2 class="title  title--uppercase">Powerbeats Pro</h2>
         <div class="desc">
-          <p>Up to 9 hours of listening time</p> 
-          <p>Apple H1 Chip &#38; Class 1 Wireless Bluetooth&#174;</p> 
-          <p>Sweat &#38; water resistant</p> 
+          <p>Up to 9 hours of listening time</p>
+          <p>Apple H1 Chip &#38; Class 1 Wireless Bluetooth&#174;</p>
+          <p>Sweat &#38; water resistant</p>
           <p>Adjustable, secure-fit earhooks</p>
         </div>
         <div class="group">
@@ -87,7 +93,7 @@
     </section>
     <!-- Section 3 -->
     <section class="area  area--reverse  area--size  area--bg-section-3">
-      <img src="assets/images/body_section-3.svg" alt="Photo for Section 3" />
+      <img class="area__image" src="assets/images/body_section-3.svg" alt="Photo for Section 3" />
       <div class="content--area">
         <p class="upper-title  upper-title--margin-bottom">Talk. Listen. Beats.</p>
         <div class="desc">
@@ -106,7 +112,8 @@
     <section class="product-container">
       <!-- Product 1 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_yellow-headphone.svg" alt="Yellow headphones" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_yellow-headphone.svg"
+            alt="Yellow headphones" /></div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
@@ -122,7 +129,8 @@
 
       <!-- Product 2 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg" alt="Black in-earphones" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg"
+            alt="Black in-earphones" /></div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div div class="card__desc  desc">
@@ -138,7 +146,8 @@
 
       <!-- Product 3 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg" alt="Gray headphones" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg"
+            alt="Gray headphones" /></div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
@@ -154,7 +163,8 @@
 
       <!-- Product 4 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg" alt="Golden in-earphones" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg"
+            alt="Golden in-earphones" /></div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
@@ -164,13 +174,14 @@
           <div class="group">
             <p class="card__price  card__price--margin">&#36;999.95</p>
             <button class="btn  btn--card  btn--card  btn--black">buy now</button>
-        </div>
+          </div>
         </div>
       </div>
 
       <!-- Product 5 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg" alt="Navy in-earphones" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg"
+            alt="Navy in-earphones" /></div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
@@ -186,7 +197,8 @@
 
       <!-- Product 6 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg" alt="Black in-earphones with lightning cable" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg"
+            alt="Black in-earphones with lightning cable" /></div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin  card--hidden">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
@@ -204,7 +216,8 @@
     <section class="form-container">
       <form class="form__content" action="#" method="get">
         <h2 class="title  form__title--margin">Hear it first</h2>
-        <p class="sub-title  form__subtitle--bottom ">Get updates on product drops, collaborations and all things Beats.</p>
+        <p class="sub-title  form__subtitle--bottom ">Get updates on product drops, collaborations and all things Beats.
+        </p>
         <input class="form__input" type="text" placeholder="Enter your email" />
         <input class="btn  btn--form  btn--yellow" type="submit" value="Sign up" />
       </form>
@@ -214,7 +227,7 @@
       <div class="grid__item"><img class="grid__logo" src="assets/images/logo.svg" alt="Logo at the footer"></div>
       <div class="grid__item">
         <ul>
-          <li><a class="grid__title" href="#">products</a></li>
+          <li><a class="grid__item--title" href="#">products</a></li>
           <li><a class="grid__item--link" href="#">headphones</a></li>
           <li><a class="grid__item--link" href="#">earphones</a></li>
           <li><a class="grid__item--link" href="#">speakers</a></li>
@@ -226,7 +239,7 @@
       </div>
       <div class="grid__item">
         <ul>
-          <li><a class="grid__title" href="#">support</a></li>
+          <li><a class="grid__item--title" href="#">support</a></li>
           <li><a class="grid__item--link" href="#">product help</a></li>
           <li><a class="grid__item--link" href="#">service & warranty</a></li>
           <li><a class="grid__item--link" href="#">register your beats</a></li>
@@ -238,7 +251,7 @@
       </div>
       <div class="grid__item">
         <ul>
-          <li><a class="grid__title" href="#">company</a></li>
+          <li><a class="grid__item--title" href="#">company</a></li>
           <li><a class="grid__item--link" href="#">product help</a></li>
           <li><a class="grid__item--link" href="#">news and events</a></li>
           <li><a class="grid__item--link" href="#">promotion terms</a></li>
@@ -250,8 +263,9 @@
       </div>
       <div class="grid__item">
         <ul>
-          <li><a class="grid__title" href="#">Follow Us</a></li>
-          <li><a class="grid__item--link" href="#"><img src="assets/images/footer_icon.svg" alt="Footer follow icon" /></a></li>
+          <li><a class="grid__item--title" href="#">Follow Us</a></li>
+          <li><a class="grid__item--link" href="#"><img src="assets/images/footer_icon.svg"
+                alt="Footer follow icon" /></a></li>
         </ul>
       </div>
       <p class="grid__item  grid__item--line">Copyright &#169; 2020 Apple Inc. - All rights reserved.</p>
@@ -259,4 +273,5 @@
   </div>
 
 </body>
+
 </html>
