Import local font, fix naming,...

--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -12,107 +12,129 @@
 
 <body>
 
-  <div class="wrapper">
-    <header class="head">
-      <nav class="navbar">
-        <a href="#"><img class="navbar__logo" src="assets/images/logo.svg" alt="logo for the website" /></a>
-        <ul class="list">
-          <li class="list__item"><a class="list__item--link" href="#">headphones</a></li>
-          <li class="list__item"><a class="list__item--link" href="#">earphones</a></li>
-          <li class="list__item"><a class="list__item--link" href="#">speakers</a></li>
-          <li class="list__item"><a class="list__item--link" href="#">explore</a></li>
-        </ul>
-        <ul class="list  list--margin">
-          <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/nav_search-icon.svg"
-                alt="search icon" /></a></li>
-          <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/nav_account-icon.svg"
-                alt="account icon" /></a></li>
-          <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/nav_cart-icon.svg"
-                alt="cart icon" /></a></li>
-        </ul>
-      </nav>
-      <div class="area">
-        <img class="area__image  area__image--reset" src="assets/images/header_photo.svg"
-          alt="photo for the header section" />
-        <div class="content--area">
+  <header class="wrapper">
+    <div class="header">
+      <div class="header-container">
+        <nav class="navbar">
+          <a href="#"><img src="assets/images/logo.svg" alt="logo for the website" /></a>
+          <ul class="list">
+            <li class="list__item"><a class="list__item--link" href="#">headphones</a></li>
+            <li class="list__item"><a class="list__item--link" href="#">earphones</a></li>
+            <li class="list__item"><a class="list__item--link" href="#">speakers</a></li>
+            <li class="list__item"><a class="list__item--link" href="#">explore</a></li>
+          </ul>
+          <ul class="list  list--margin">
+            <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/search-icon.svg"
+                  alt="search icon" /></a></li>
+            <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/account-icon.svg"
+                  alt="account icon" /></a></li>
+            <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/cart-icon.svg"
+                  alt="cart icon" /></a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="area  area--content-direction  area--header-bg">
+        <img class="area__img" src="assets/images/header-product.svg" alt="photo for the header section" />
+        <div class="content  content--header">
           <h2 class="upper-title  upper-title--header">Beats Studio3 Wireless</h2>
-          <h1 class="title  title--header">Experience your<br />music like never before.</h1>
+          <h1 class="title  title--header">
+            <p>Experience your</p>
+            <p>music like never before.</p>
+          </h1>
           <div class="group">
             <p class="price  price--white">&#36;299.95</p>
             <button class="btn  btn--yellow  btn--header-margin">buy now</button>
           </div>
-          <p class="promo  promo--header">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
+          <p class="promo  promo--yellow">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
         </div>
       </div>
-    </header>
-    <!-- Section 1 Beats Pill -->
-    <section class="area  area--size  area--reverse">
-      <div class="area__item">
-        <img class="area__image" src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
-        <div class="carousel">
-          <span class="carousel__item  carousel__item--black"></span>
-          <span class="carousel__item  carousel__item--gray"></span>
-          <span class="carousel__item  carousel__item--gray"></span>
+    </div>
+  </header>
+
+  <!-- Section 1 Beats Pill -->
+  <section class="wrapper">
+    <div class="pd-section-1">
+      <div class="area  area--reverse">
+        <div class="area__item">
+          <img class="pd-img-section-1" src="assets/images/beats-pill.svg" alt="Photo Beats Pill for Section" />
+          <div class="carousel">
+            <span class="carousel__item  carousel__item--black"></span>
+            <span class="carousel__item  carousel__item--gray"></span>
+            <span class="carousel__item  carousel__item--gray"></span>
+          </div>
+        </div>
+        <div class="content  pd-content-section-1">
+          <p class="upper-title">Portable Wireless Speaker</p>
+          <h2 class="title">Beats Pill<sup>+</sup></h2>
+          <p class="sub-title  sub-title--font">Available Colors</p>
+          <p class="upper-title">Find your Color</p>
+          <div class="dot">
+            <span class="dot__item  dot__item--white"></span>
+            <span class="dot__item  dot__item--red"></span>
+            <span class="dot__item  dot__item--black"></span>
+          </div>
+          <div class="group">
+            <p class="price">&#36;299.95</p>
+            <button class="btn  btn--black">buy now</button>
+          </div>
+          <p class="promo  promo--black">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
         </div>
       </div>
-      <div class="content--area">
-        <p class="upper-title">Portable Wireless Speaker</p>
-        <h2 class="title">Beats Pill<sup>+</sup></h2>
-        <p class="sub-title  sub-title--font">Available Colors</p>
-        <p class="upper-title">Find your Color</p>
-        <div class="dot">
-          <span class="dot__item  dot__item--white"></span>
-          <span class="dot__item  dot__item--red"></span>
-          <span class="dot__item  dot__item--black"></span>
-        </div>
-        <div class="group">
-          <p class="price">&#36;299.95</p>
-          <button class="btn  btn--black">buy now</button>
-        </div>
-        <p class="promo  promo--black">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
-      </div>
-    </section>
-    <!-- Section 2 PowerBeat Pro -->
-    <section class="area  area--size  area--bg-section-2">
-      <img class="area__image" src="assets/images/body_powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
-      <div class="content--area">
-        <p class="upper-title">Totally wireless high-performance earphones</p>
-        <h2 class="title  title--uppercase">Powerbeats Pro</h2>
-        <div class="desc">
-          <p>Up to 9 hours of listening time</p>
-          <p>Apple H1 Chip &#38; Class 1 Wireless Bluetooth&#174;</p>
-          <p>Sweat &#38; water resistant</p>
-          <p>Adjustable, secure-fit earhooks</p>
-        </div>
-        <div class="group">
-          <p class="price">&#36;199.95</p>
-          <button class="btn  btn--black">buy now</button>
-        </div>
-        <p class="promo  promo--white">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
-      </div>
-    </section>
-    <!-- Section 3 -->
-    <section class="area  area--reverse  area--size  area--bg-section-3">
-      <img class="area__image" src="assets/images/body_section-3.svg" alt="Photo for Section 3" />
-      <div class="content--area">
-        <p class="upper-title  upper-title--margin-bottom">Talk. Listen. Beats.</p>
-        <div class="desc">
-          <p>Up to 8 hours of battery life</p>
-          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-          <p>Sweat &#38; water resistant</p>
-          <p>Apple W1 Chip &#38; Class 1 Wireless Bluetooth&#174;</p>
-        </div>
-        <div class="group">
-          <p class="price">&#36;199.95</p>
-          <button class="btn  btn--black">buy now</button>
+    </div>
+  </section>
+
+  <!-- Section 2 PowerBeat Pro -->
+  <section class="wrapper">
+    <div class="pd-section-2  area--bg-section-2">
+      <div class="area">
+        <img class="pd-img-section-2" src="assets/images/powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
+        <div class="content  pd-content-section-2">
+          <p class="upper-title">Totally wireless high-performance earphones</p>
+          <h2 class="title  title--uppercase">Powerbeats Pro</h2>
+          <div class="desc">
+            <p>Up to 9 hours of listening time</p>
+            <p>Apple H1 Chip &#38; Class 1 Wireless Bluetooth&#174;</p>
+            <p>Sweat &#38; water resistant</p>
+            <p>Adjustable, secure-fit earhooks</p>
+          </div>
+          <div class="group">
+            <p class="price">&#36;199.95</p>
+            <button class="btn  btn--black">buy now</button>
+          </div>
+          <p class="promo  promo--white">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
         </div>
       </div>
-    </section>
-    <!-- List Product -->
-    <section class="product-container">
+    </div>
+  </section>
+
+  <!-- Section 3 -->
+  <section class="wrapper">
+    <div class="pd-section-3  area--bg-section-3">
+      <div class="area  area--reverse">
+        <img class="pd-img-section-3" src="assets/images/section-3.svg" alt="Photo for Section 3" />
+        <div class="content  pd-content-section-3">
+          <p class="upper-title  upper-title--margin-bottom">Talk. Listen. Beats.</p>
+          <div class="desc">
+            <p>Up to 8 hours of battery life</p>
+            <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+            <p>Sweat &#38; water resistant</p>
+            <p>Apple W1 Chip &#38; Class 1 Wireless Bluetooth&#174;</p>
+          </div>
+          <div class="group">
+            <p class="price">&#36;199.95</p>
+            <button class="btn  btn--black">buy now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- List Product -->
+  <section class="wrapper">
+    <div class="product-container">
       <!-- Product 1 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_yellow-headphone.svg"
+        <div class="card__holder"><img class="card__img" src="assets/images/yellow-headphone.svg"
             alt="Yellow headphones" /></div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
@@ -129,8 +151,8 @@
 
       <!-- Product 2 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg"
-            alt="Black in-earphones" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/black-inear.svg" alt="Black in-earphones" />
+        </div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div div class="card__desc  desc">
@@ -146,8 +168,8 @@
 
       <!-- Product 3 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg"
-            alt="Gray headphones" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/gray-headphone.svg" alt="Gray headphones" />
+        </div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
@@ -163,8 +185,8 @@
 
       <!-- Product 4 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg"
-            alt="Golden in-earphones" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/gold-inear.svg" alt="Golden in-earphones" />
+        </div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
@@ -180,8 +202,8 @@
 
       <!-- Product 5 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg"
-            alt="Navy in-earphones" /></div>
+        <div class="card__holder"><img class="card__img" src="assets/images/navy-inear.svg" alt="Navy in-earphones" />
+        </div>
         <div class="content--card">
           <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
@@ -197,10 +219,10 @@
 
       <!-- Product 6 -->
       <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg"
+        <div class="card__holder"><img class="card__img" src="assets/images/black-inear-lightning.svg"
             alt="Black in-earphones with lightning cable" /></div>
         <div class="content--card">
-          <p class="title  title--card  card__title--margin  card--hidden">Beats<sup>x</sup></p>
+          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
             <p>Up to 8 hours of battery life</p>
             <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
@@ -211,9 +233,12 @@
           </div>
         </div>
       </div>
-    </section>
-    <!-- Contact Form -->
-    <section class="form-container">
+    </div>
+  </section>
+
+  <!-- Contact Form -->
+  <section class="wrapper">
+    <div class="form">
       <form class="form__content" action="#" method="get">
         <h2 class="title  form__title--margin">Hear it first</h2>
         <p class="sub-title  form__subtitle--bottom ">Get updates on product drops, collaborations and all things Beats.
@@ -221,56 +246,55 @@
         <input class="form__input" type="text" placeholder="Enter your email" />
         <input class="btn  btn--form  btn--yellow" type="submit" value="Sign up" />
       </form>
-    </section>
-    <!-- Footer -->
-    <footer class="grid">
-      <div class="grid__item"><img class="grid__logo" src="assets/images/logo.svg" alt="Logo at the footer"></div>
-      <div class="grid__item">
-        <ul>
-          <li><a class="grid__item--title" href="#">products</a></li>
-          <li><a class="grid__item--link" href="#">headphones</a></li>
-          <li><a class="grid__item--link" href="#">earphones</a></li>
-          <li><a class="grid__item--link" href="#">speakers</a></li>
-          <li><a class="grid__item--link" href="#">accessories</a></li>
-          <li><a class="grid__item--link" href="#">collaborations</a></li>
-          <li><a class="grid__item--link" href="#">beatsaudio</a></li>
-          <li><a class="grid__item--link" href="#">special offers</a></li>
-        </ul>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="wrapper">
+    <div class="footer-container">
+      <div class="footer">
+        <div class="pd-footer  footer--flex">
+          <img class="footer__logo" src="assets/images/logo.svg" alt="Logo at the footer">
+          <ul class="footer__list">
+            <li><a class="footer__item--title" href="#">products</a></li>
+            <li><a class="footer__item--link" href="#">headphones</a></li>
+            <li><a class="footer__item--link" href="#">earphones</a></li>
+            <li><a class="footer__item--link" href="#">speakers</a></li>
+            <li><a class="footer__item--link" href="#">accessories</a></li>
+            <li><a class="footer__item--link" href="#">collaborations</a></li>
+            <li><a class="footer__item--link" href="#">beatsaudio</a></li>
+            <li><a class="footer__item--link" href="#">special offers</a></li>
+          </ul>
+          <ul class="footer__list">
+            <li><a class="footer__item--title" href="#">support</a></li>
+            <li><a class="footer__item--link" href="#">product help</a></li>
+            <li><a class="footer__item--link" href="#">service & warranty</a></li>
+            <li><a class="footer__item--link" href="#">register your beats</a></li>
+            <li><a class="footer__item--link" href="#">update your beats</a></li>
+            <li><a class="footer__item--link" href="#">authorized service providers</a></li>
+            <li><a class="footer__item--link" href="#">contact support</a></li>
+            <li><a class="footer__item--link" href="#">international numbers</a></li>
+          </ul>
+          <ul class="footer__list">
+            <li><a class="footer__item--title" href="#">company</a></li>
+            <li><a class="footer__item--link" href="#">product help</a></li>
+            <li><a class="footer__item--link" href="#">news and events</a></li>
+            <li><a class="footer__item--link" href="#">promotion terms</a></li>
+            <li><a class="footer__item--link" href="#">privacy policy</a></li>
+            <li><a class="footer__item--link" href="#">trademark</a></li>
+            <li><a class="footer__item--link" href="#">terms of use</a></li>
+            <li><a class="footer__item--link" href="#">cookies</a></li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item--pd"><a class="footer__item--title" href="#">Follow Us</a></li>
+            <li><a class="footer__item--link" href="#"><img src="assets/images/follow-us-icon.svg"
+                  alt="Footer follow icon" /></a></li>
+          </ul>
+        </div>
+        <p class="footer__item  footer__item--line">Copyright &#169; 2020 Apple Inc. - All rights reserved.</p>
       </div>
-      <div class="grid__item">
-        <ul>
-          <li><a class="grid__item--title" href="#">support</a></li>
-          <li><a class="grid__item--link" href="#">product help</a></li>
-          <li><a class="grid__item--link" href="#">service & warranty</a></li>
-          <li><a class="grid__item--link" href="#">register your beats</a></li>
-          <li><a class="grid__item--link" href="#">update your beats</a></li>
-          <li><a class="grid__item--link" href="#">authorized service providers</a></li>
-          <li><a class="grid__item--link" href="#">contact support</a></li>
-          <li><a class="grid__item--link" href="#">international numbers</a></li>
-        </ul>
-      </div>
-      <div class="grid__item">
-        <ul>
-          <li><a class="grid__item--title" href="#">company</a></li>
-          <li><a class="grid__item--link" href="#">product help</a></li>
-          <li><a class="grid__item--link" href="#">news and events</a></li>
-          <li><a class="grid__item--link" href="#">promotion terms</a></li>
-          <li><a class="grid__item--link" href="#">privacy policy</a></li>
-          <li><a class="grid__item--link" href="#">trademark</a></li>
-          <li><a class="grid__item--link" href="#">terms of use</a></li>
-          <li><a class="grid__item--link" href="#">cookies</a></li>
-        </ul>
-      </div>
-      <div class="grid__item">
-        <ul>
-          <li><a class="grid__item--title" href="#">Follow Us</a></li>
-          <li><a class="grid__item--link" href="#"><img src="assets/images/footer_icon.svg"
-                alt="Footer follow icon" /></a></li>
-        </ul>
-      </div>
-      <p class="grid__item  grid__item--line">Copyright &#169; 2020 Apple Inc. - All rights reserved.</p>
-    </footer>
-  </div>
+    </div>
+  </footer>
 
 </body>
 
