--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -23,7 +23,7 @@
             <li class="list__item"><a class="list__item--link" href="#">speakers</a></li>
             <li class="list__item"><a class="list__item--link" href="#">explore</a></li>
           </ul>
-          <ul class="list  list--margin">
+          <ul class="list  list--spacing">
             <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/search-icon.svg"
                   alt="search icon" /></a></li>
             <li class="list__icon"><a class="list__icon--padding" href="#"><img src="assets/images/account-icon.svg"
@@ -42,10 +42,10 @@
             <p>music like never before.</p>
           </h1>
           <div class="group">
-            <p class="price  price--white">&#36;299.95</p>
-            <button class="btn  btn--yellow  btn--header-margin">buy now</button>
+            <p class="price  price--light">&#36;299.95</p>
+            <button class="btn  btn--warning  btn--header">buy now</button>
           </div>
-          <p class="promo  promo--yellow">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
+          <p class="promo  promo--warning">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
         </div>
       </div>
     </div>
@@ -53,31 +53,31 @@
 
   <!-- Section 1 Beats Pill -->
   <section class="wrapper">
-    <div class="pd-section-1">
+    <div class="pd-product-speaker">
       <div class="area  area--reverse">
         <div class="area__item">
-          <img class="pd-img-section-1" src="assets/images/beats-pill.svg" alt="Photo Beats Pill for Section" />
+          <img class="pd-img-product-speaker" src="assets/images/beats-pill.svg" alt="Photo Beats Pill for Section" />
           <div class="carousel">
-            <span class="carousel__item  carousel__item--black"></span>
-            <span class="carousel__item  carousel__item--gray"></span>
-            <span class="carousel__item  carousel__item--gray"></span>
+            <span class="carousel__item  carousel__item--dark"></span>
+            <span class="carousel__item  carousel__item--muted"></span>
+            <span class="carousel__item  carousel__item--muted"></span>
           </div>
         </div>
-        <div class="content  pd-content-section-1">
+        <div class="content  pd-content-product-speaker">
           <p class="upper-title">Portable Wireless Speaker</p>
           <h2 class="title">Beats Pill<sup>+</sup></h2>
           <p class="sub-title  sub-title--font">Available Colors</p>
           <p class="upper-title">Find your Color</p>
           <div class="dot">
-            <span class="dot__item  dot__item--white"></span>
-            <span class="dot__item  dot__item--red"></span>
-            <span class="dot__item  dot__item--black"></span>
+            <span class="dot__item  dot__item--light"></span>
+            <span class="dot__item  dot__item--danger"></span>
+            <span class="dot__item  dot__item--dark"></span>
           </div>
           <div class="group">
             <p class="price">&#36;299.95</p>
-            <button class="btn  btn--black">buy now</button>
+            <button class="btn  btn--dark">buy now</button>
           </div>
-          <p class="promo  promo--black">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
+          <p class="promo  promo--dark">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
         </div>
       </div>
     </div>
@@ -85,10 +85,10 @@
 
   <!-- Section 2 PowerBeat Pro -->
   <section class="wrapper">
-    <div class="pd-section-2  area--bg-section-2">
+    <div class="pd-product-beatinear  area--bg-product-beatinear">
       <div class="area">
-        <img class="pd-img-section-2" src="assets/images/powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
-        <div class="content  pd-content-section-2">
+        <img class="pd-img-product-beatinear" src="assets/images/powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
+        <div class="content  pd-content-product-beatinear">
           <p class="upper-title">Totally wireless high-performance earphones</p>
           <h2 class="title  title--uppercase">Powerbeats Pro</h2>
           <div class="desc">
@@ -99,9 +99,9 @@
           </div>
           <div class="group">
             <p class="price">&#36;199.95</p>
-            <button class="btn  btn--black">buy now</button>
+            <button class="btn  btn--dark">buy now</button>
           </div>
-          <p class="promo  promo--white">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
+          <p class="promo  promo--light">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
         </div>
       </div>
     </div>
@@ -109,11 +109,11 @@
 
   <!-- Section 3 -->
   <section class="wrapper">
-    <div class="pd-section-3  area--bg-section-3">
+    <div class="pd-product-inear  area--bg-product-inear">
       <div class="area  area--reverse">
-        <img class="pd-img-section-3" src="assets/images/section-3.svg" alt="Photo for Section 3" />
-        <div class="content  pd-content-section-3">
-          <p class="upper-title  upper-title--margin-bottom">Talk. Listen. Beats.</p>
+        <img class="pd-img-product-inear" src="assets/images/section-3.svg" alt="Photo for Section 3" />
+        <div class="content  pd-content-product-inear">
+          <p class="upper-title  upper-title--bottom">Talk. Listen. Beats.</p>
           <div class="desc">
             <p>Up to 8 hours of battery life</p>
             <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
@@ -122,7 +122,7 @@
           </div>
           <div class="group">
             <p class="price">&#36;199.95</p>
-            <button class="btn  btn--black">buy now</button>
+            <button class="btn  btn--dark">buy now</button>
           </div>
         </div>
       </div>
@@ -133,103 +133,91 @@
   <section class="wrapper">
     <div class="product-container">
       <!-- Product 1 -->
-      <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/yellow-headphone.svg"
-            alt="Yellow headphones" /></div>
+      <div class="card  card--backgroud-first">
         <div class="content--card">
-          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <p class="title  title--card  card__title--spacing">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
             <p>Up to 8 hours of battery life</p>
             <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
           </div>
           <div class="group">
-            <p class="card__price  card__price--margin">&#36;299.95</p>
-            <button class="btn  btn--card  btn--black">buy now</button>
+            <p class="card__price  card__price--spacing">&#36;299.95</p>
+            <button class="btn  btn--card  btn--dark">buy now</button>
           </div>
         </div>
       </div>
 
       <!-- Product 2 -->
-      <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/black-inear.svg" alt="Black in-earphones" />
-        </div>
+      <div class="card  card--backgroud-second">
         <div class="content--card">
-          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <p class="title  title--card  card__title--spacing">Beats<sup>x</sup></p>
           <div div class="card__desc  desc">
             <p>Up to 8 hours of battery life</p>
             <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
           </div>
           <div class="group">
-            <p class="card__price  card__price--margin">&#36;199.95</p>
-            <button class="btn  btn--card  btn--black">buy now</button>
+            <p class="card__price  card__price--spacing">&#36;199.95</p>
+            <button class="btn  btn--card  btn--dark">buy now</button>
           </div>
         </div>
       </div>
 
       <!-- Product 3 -->
-      <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/gray-headphone.svg" alt="Gray headphones" />
-        </div>
+      <div class="card  card--backgroud-third">
         <div class="content--card">
-          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <p class="title  title--card  card__title--spacing">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
             <p>Up to 8 hours of battery life</p>
             <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
           </div>
           <div class="group">
-            <p class="card__price  card__price--margin">&#36;199.95</p>
-            <button class="btn  btn--card  btn--black">buy now</button>
+            <p class="card__price  card__price--spacing">&#36;199.95</p>
+            <button class="btn  btn--card  btn--dark">buy now</button>
           </div>
         </div>
       </div>
 
       <!-- Product 4 -->
-      <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/gold-inear.svg" alt="Golden in-earphones" />
-        </div>
+      <div class="card  card--backgroud-fourth">
         <div class="content--card">
-          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <p class="title  title--card  card__title--spacing">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
             <p>Up to 8 hours of battery life</p>
             <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
           </div>
           <div class="group">
-            <p class="card__price  card__price--margin">&#36;999.95</p>
-            <button class="btn  btn--card  btn--card  btn--black">buy now</button>
+            <p class="card__price  card__price--spacing">&#36;999.95</p>
+            <button class="btn  btn--card  btn--card  btn--dark">buy now</button>
           </div>
         </div>
       </div>
 
       <!-- Product 5 -->
-      <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/navy-inear.svg" alt="Navy in-earphones" />
-        </div>
+      <div class="card  card--backgroud-fifth">
         <div class="content--card">
-          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <p class="title  title--card  card__title--spacing">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
             <p>Up to 8 hours of battery life</p>
             <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
           </div>
           <div class="group">
-            <p class="card__price  card__price--margin">&#36;99.95</p>
-            <button class="btn  btn--card  btn--card  btn--black">buy now</button>
+            <p class="card__price  card__price--spacing">&#36;99.95</p>
+            <button class="btn  btn--card  btn--card  btn--dark">buy now</button>
           </div>
         </div>
       </div>
 
       <!-- Product 6 -->
-      <div class="card">
-        <div class="card__holder"><img class="card__img" src="assets/images/black-inear-lightning.svg"
-            alt="Black in-earphones with lightning cable" /></div>
+      <div class="card  card--backgroud-sixth">
         <div class="content--card">
-          <p class="title  title--card  card__title--margin">Beats<sup>x</sup></p>
+          <p class="title  title--card  card__title--spacing">Beats<sup>x</sup></p>
           <div class="card__desc  desc">
             <p>Up to 8 hours of battery life</p>
             <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
           </div>
           <div class="group">
-            <p class="card__price  card__price--margin">&#36;299.95</p>
-            <button class="btn  btn--card  btn--card  btn--black">buy now</button>
+            <p class="card__price  card__price--spacing">&#36;299.95</p>
+            <button class="btn  btn--card  btn--card  btn--dark">buy now</button>
           </div>
         </div>
       </div>
@@ -240,11 +228,11 @@
   <section class="wrapper">
     <div class="form">
       <form class="form__content" action="#" method="get">
-        <h2 class="title  form__title--margin">Hear it first</h2>
+        <h2 class="title  form__title--spacing">Hear it first</h2>
         <p class="sub-title  form__subtitle--bottom ">Get updates on product drops, collaborations and all things Beats.
         </p>
         <input class="form__input" type="text" placeholder="Enter your email" />
-        <input class="btn  btn--form  btn--yellow" type="submit" value="Sign up" />
+        <input class="btn  btn--form  btn--warning" type="submit" value="Sign up" />
       </form>
     </div>
   </section>
