Adding break point

--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -5,7 +5,7 @@
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Ecommerce Product Website</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link rel="stylesheet" href="styles/reset.css">
   <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
 </head>
@@ -17,6 +17,7 @@
       <div class="header-container">
         <nav class="navbar">
           <a href="#"><img src="assets/images/logo.svg" alt="logo for the website" /></a>
+          <a href="#"><img src="assets/images/collapse.svg" srcset="assets/images/collapse.svg 1200w" alt="collapse icon" /></a>
           <ul class="list">
             <li class="list__item"><a class="list__item--link" href="#">headphones</a></li>
             <li class="list__item"><a class="list__item--link" href="#">earphones</a></li>
@@ -85,10 +86,10 @@
 
   <!-- Section 2 PowerBeat Pro -->
   <section class="wrapper">
-    <div class="pd-product-beatinear  area--bg-product-beatinear">
+    <div class="pd-product-beats  area--bg-product-beats">
       <div class="area">
-        <img class="pd-img-product-beatinear" src="assets/images/powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
-        <div class="content  pd-content-product-beatinear">
+        <img class="pd-img-product-beats" src="assets/images/powerbeats-pro.svg" alt="Photo PowerBeats Pro for Section 2" />
+        <div class="content  pd-content-product-beats">
           <p class="upper-title">Totally wireless high-performance earphones</p>
           <h2 class="title  title--uppercase">Powerbeats Pro</h2>
           <div class="desc">
@@ -244,38 +245,38 @@
         <div class="pd-footer  footer--flex">
           <img class="footer__logo" src="assets/images/logo.svg" alt="Logo at the footer">
           <ul class="footer__list">
-            <li><a class="footer__item--title" href="#">products</a></li>
-            <li><a class="footer__item--link" href="#">headphones</a></li>
-            <li><a class="footer__item--link" href="#">earphones</a></li>
-            <li><a class="footer__item--link" href="#">speakers</a></li>
-            <li><a class="footer__item--link" href="#">accessories</a></li>
-            <li><a class="footer__item--link" href="#">collaborations</a></li>
-            <li><a class="footer__item--link" href="#">beatsaudio</a></li>
-            <li><a class="footer__item--link" href="#">special offers</a></li>
+            <li><a class="footer__title" href="#">products</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">headphones</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">earphones</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">speakers</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">accessories</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">collaborations</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">beatsaudio</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">special offers</a></li>
           </ul>
           <ul class="footer__list">
-            <li><a class="footer__item--title" href="#">support</a></li>
-            <li><a class="footer__item--link" href="#">product help</a></li>
-            <li><a class="footer__item--link" href="#">service & warranty</a></li>
-            <li><a class="footer__item--link" href="#">register your beats</a></li>
-            <li><a class="footer__item--link" href="#">update your beats</a></li>
-            <li><a class="footer__item--link" href="#">authorized service providers</a></li>
-            <li><a class="footer__item--link" href="#">contact support</a></li>
-            <li><a class="footer__item--link" href="#">international numbers</a></li>
+            <li><a class="footer__title" href="#">support</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">product help</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">service & warranty</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">register your beats</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">update your beats</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">authorized service providers</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">contact support</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">international numbers</a></li>
           </ul>
           <ul class="footer__list">
-            <li><a class="footer__item--title" href="#">company</a></li>
-            <li><a class="footer__item--link" href="#">product help</a></li>
-            <li><a class="footer__item--link" href="#">news and events</a></li>
-            <li><a class="footer__item--link" href="#">promotion terms</a></li>
-            <li><a class="footer__item--link" href="#">privacy policy</a></li>
-            <li><a class="footer__item--link" href="#">trademark</a></li>
-            <li><a class="footer__item--link" href="#">terms of use</a></li>
-            <li><a class="footer__item--link" href="#">cookies</a></li>
+            <li><a class="footer__title" href="#">company</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">product help</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">news and events</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">promotion terms</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">privacy policy</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">trademark</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">terms of use</a></li>
+            <li><a class="footer__item  footer__item--link" href="#">cookies</a></li>
           </ul>
           <ul class="footer__list">
-            <li class="footer__item--pd"><a class="footer__item--title" href="#">Follow Us</a></li>
-            <li><a class="footer__item--link" href="#"><img src="assets/images/follow-us-icon.svg"
+            <li class="footer__item  footer__item--pd"><a class="footer__title" href="#">Follow Us</a></li>
+            <li><a class="footer__item  footer__item--icon" href="#"><img src="assets/images/follow-us-icon.svg"
                   alt="Footer follow icon" /></a></li>
           </ul>
         </div>
