--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -17,7 +17,7 @@
       <div class="header-container">
         <nav class="navbar">
           <a href="#"><img src="assets/images/logo.svg" alt="logo for the website" /></a>
-          <a href="#"><img src="assets/images/collapse.svg" srcset="assets/images/collapse.svg 1200w" alt="collapse icon" /></a>
+          <a href="#"><img class="collapse-icon" src="assets/images/collapse.svg" alt="collapse icon" /></a>
           <ul class="list">
             <li class="list__item"><a class="list__item--link" href="#">headphones</a></li>
             <li class="list__item"><a class="list__item--link" href="#">earphones</a></li>
@@ -125,6 +125,7 @@
             <p class="price">&#36;199.95</p>
             <button class="btn  btn--dark">buy now</button>
           </div>
+          <p class="promo  promo--dark">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
         </div>
       </div>
     </div>
@@ -246,13 +247,13 @@
           <img class="footer__logo" src="assets/images/logo.svg" alt="Logo at the footer">
           <ul class="footer__list">
             <li><a class="footer__title" href="#">products</a></li>
-            <li><a class="footer__item  footer__item--link" href="#">headphones</a></li>
-            <li><a class="footer__item  footer__item--link" href="#">earphones</a></li>
-            <li><a class="footer__item  footer__item--link" href="#">speakers</a></li>
-            <li><a class="footer__item  footer__item--link" href="#">accessories</a></li>
-            <li><a class="footer__item  footer__item--link" href="#">collaborations</a></li>
-            <li><a class="footer__item  footer__item--link" href="#">beatsaudio</a></li>
-            <li><a class="footer__item  footer__item--link" href="#">special offers</a></li>
+            <li><a class="footer__item  footer__item--link  footer__item--state" href="#">headphones</a></li>
+            <li><a class="footer__item  footer__item--link  footer__item--state" href="#">earphones</a></li>
+            <li><a class="footer__item  footer__item--link  footer__item--state" href="#">speakers</a></li>
+            <li><a class="footer__item  footer__item--link  footer__item--state" href="#">accessories</a></li>
+            <li><a class="footer__item  footer__item--link  footer__item--state" href="#">collaborations</a></li>
+            <li><a class="footer__item  footer__item--link  footer__item--state" href="#">beatsaudio</a></li>
+            <li><a class="footer__item  footer__item--link  footer__item--state" href="#">special offers</a></li>
           </ul>
           <ul class="footer__list">
             <li><a class="footer__title" href="#">support</a></li>
@@ -274,7 +275,7 @@
             <li><a class="footer__item  footer__item--link" href="#">terms of use</a></li>
             <li><a class="footer__item  footer__item--link" href="#">cookies</a></li>
           </ul>
-          <ul class="footer__list">
+          <ul class="footer__list  footer__list--decorate">
             <li class="footer__item  footer__item--pd"><a class="footer__title" href="#">Follow Us</a></li>
             <li><a class="footer__item  footer__item--icon" href="#"><img src="assets/images/follow-us-icon.svg"
                   alt="Footer follow icon" /></a></li>
