--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -14,7 +14,7 @@
 
   <header class="wrapper">
     <div class="header">
-      <div class="header-container">
+      <div class="header__container">
         <nav class="navbar">
           <a href="#"><img src="assets/images/logo.svg" alt="logo for the website" /></a>
           <a href="#"><img class="collapse-icon" src="assets/images/collapse.svg" alt="collapse icon" /></a>
