--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -6,15 +6,16 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Ecommerce Product Website</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
+  <!-- <link rel="stylesheet" href="styles/reset.css">
+  <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'> -->
+  <link rel='stylesheet' type='text/css' media='screen' href='sass/test.css'>
 </head>
 
 <body>
 
   <header class="wrapper">
     <div class="header">
-      <div class="header__container">
+      <div class="header  header--container">
         <nav class="navbar">
           <a href="#"><img src="assets/images/logo.svg" alt="logo for the website" /></a>
           <a href="#"><img class="collapse-icon" src="assets/images/collapse.svg" alt="collapse icon" /></a>
