--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Ecommerce Product Website</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='sass/main.scss'>
+  <link rel='stylesheet' type='text/css' media='screen' href='styles/main.scss'>
 </head>
 
 <body>
